fix some spacing on pagination button and footer

--- a/themes/akhmad/static/assets/css/tailwind.css
+++ b/themes/akhmad/static/assets/css/tailwind.css
@@ -693,6 +693,10 @@ video {
   height: auto;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
 .h-6 {
   height: 1.5rem;
 }
@@ -802,6 +806,10 @@ video {
 
 .pb-5 {
   padding-bottom: 1.25rem;
+}
+
+.pb-10 {
+  padding-bottom: 2.5rem;
 }
 
 .pt-12 {
